Fix: transitionを調整。visibilityのCSSをtransitionで追加。

--- a/src/scss/component/_search-form.scss
+++ b/src/scss/component/_search-form.scss
@@ -17,7 +17,7 @@
   width: 100%;
   height: 100%;
   background-color: var(--color-white);
-  transition: opacity 0.2s g.ease(in-quart);
+  transition: opacity 0.2s g.ease(in-out-cubic), visibility 0.2s g.ease(in-out-cubic);
   z-index: var(--z-index-search-form);
 
   &__field {
@@ -31,7 +31,7 @@
     border: none;
     font-size: 1.25em;
     font-family: var(--font-family-base);
-    transition: top 0.2s g.ease(in-quart);
+    transition: top 0.2s g.ease(in-out-cubic);
 
     &:focus {
       outline: none;
@@ -44,7 +44,6 @@
   opacity: 1;
   visibility: visible;
   pointer-events: all;
-  z-index: var(--z-index-search-form);
 
   .search-form__field {
     top: 0;
